# Lyriks

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
lyriks/: __init__.py  cli.py
lyriks/core/: __init__.py  audio_processor.py  ffmpeg.py  gemini.py  video_generator.py  video_generator_mp.py  video_generator_ps2.py  youtube.py
lyriks/tests/: test_video_generator.py
