[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyriks"
version = "0.1.0"
description = "Automated lyrics video generator"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "GPL-3.0"
authors = [
    {name = "simon0302010", email = "simon0302010@gmail.com"}
]
dependencies = [
    "click",
    "demucs",
    "langdetect",
    "onnxruntime",
    "openai-whisper",
    "soundfile",
    "torch",
    "torchaudio",
    "whisper-timestamped",
    "moviepy"
]

[project.urls]
Homepage = "https://github.com/simon0302010/Lyriks"